# victorops

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
examples/: incidents.rs  team_schedule.rs
src/: client.rs  error.rs  lib.rs  types.rs
