[package]
name = "victorops"
version = "0.1.2"
edition = "2024"
authors = ["Endoze <endoze@endozemedia.com>"]
description = "Async Rust client for VictorOps"
license = "MIT"
repository = "https://github.com/endoze/victorops"
keywords = ["victorops", "api", "client", "async", "monitoring"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
